Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87107

QFontMetricsF::boundingRect handles a null QRectF differently when passed in as it does not constrain to the size of it

XMLWordPrintable

    • 149ad1e615bf0974e52a681af73e9fb04bc1c762 (qt/qtbase/dev) cf5439c59a134de57f47bfa4e310035d9347d62f (qt/qtbase/6.0) 64af603c959e44e0b558a2dbe0c2251f038f2020 (qt/tqtc-qtbase/tqtc/lts-5.15)

      QFontMetricsF::boundingRect handles a null QRectF differently when passed in as it does not constrain to the size of it, this would appear to be because it is a null rect and therefore it handles it in a different way. So this should be documented to be the case.

        For Gerrit Dashboard: QTBUG-87107
        # Subject Branch Project Status CR V

            paulwicking Paul Wicking
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes